--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -3,24 +3,9 @@
     <div *ngIf="isLoading" style="text-align: center;">
       <app-loading-spinner></app-loading-spinner>
     </div>
-    <form [formGroup]="signInForm" (ngSubmit)="onSubmit()" *ngIf="!isLoginMode && !isLoading">
-      <div class="form-group">
-        <div class="col-xs-12">
-          <label for="email">E-Mail</label>
-          <input
-            type="email"
-            id="email"
-            class="form-control"
-            formControlName="email"
-            name="email"
-            required
-            email/>
-        </div>
-      </div>
-    </form>
-    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()" *ngIf="!isLoading">
-      <div class="form-group">
-        <div class="col-xs-12">
+    <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+      <div class="form-group" >
+        <div class="col-xs-12" >
           <label for="username">Username</label>
           <input
             type="username"
@@ -42,59 +27,57 @@
             minlength="6">
         </div>
       </div>
-      <br>
-      <div>
-        <button
-          type="submit"
-          class="btn btn-primary"
-          [disabled]="!signUpForm.valid">
-          {{ isLoginMode ? 'Login' : 'Sign Up'}}</button> |
-        <button
-          class="btn btn-primary"
-          type="button"
-          (click)="onSwithcMode()">
-          {{ isLoginMode ? 'Switch to SignUp' : 'Switch to Login'}}
-        </button>
-      </div>
-      <br>
-      <div class="row" *ngIf="!confirmUser">
-        <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3 text-center">
-          <button class="btn btn-default" (click)="onDoConfirm()">Confirm User</button>
-        </div>
-      </div>
-      <div class="row" *ngIf="confirmUser">
-        <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3">
-          <form [formGroup]="confirmForm" (ngSubmit)="onConfirm()" class="jumbotron text-center">
-            <div class="form-group">
-              <label
-                for="usrName"
-                class="control-label">Username</label>
-              <input
-                type="text"
-                id="usrName"
-                name="usrName"
-                class="form-control text-center"
-                formControlName="usrName"
-                required>
-            </div>
-            <div class="form-group">
-              <label
-                for="validationCode"
-                class="control-label">Validation Code</label>
-              <input
-                type="text"
-                id="validationCode"
-                name="validationCode"
-                class="form-control text-center"
-                formControlName="validationCode"
-                required>
-            </div>
-            <br>
-            <button class="btn btn-primary" type="submit" [disabled]="!confirmForm.valid">Confirm your Account</button>
-          </form>
-          <div class="loader" *ngIf="isLoading"></div>
-        </div>
-      </div>
     </form>
+    <br>
+    <div>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        (click)="onSubmit()">Login</button> |
+      <button
+        class="btn btn-primary"
+        type="button"
+        routerLinkActive="active"
+        (click)="switchToSignUp()">Switch to SignUp</button>
+    </div>
+    <br>
+    <div class="row" *ngIf="!confirmUser">
+      <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3 text-center">
+        <button class="btn btn-default" (click)="onDoConfirm()">Confirm User</button>
+      </div>
+    </div>
+    <div class="row" *ngIf="confirmUser">
+      <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3">
+        <form [formGroup]="confirmForm" (ngSubmit)="onConfirm()" class="jumbotron text-center">
+          <div class="form-group">
+            <label
+              for="usrName"
+              class="control-label">Username</label>
+            <input
+              type="text"
+              id="usrName"
+              name="usrName"
+              class="form-control text-center"
+              formControlName="usrName"
+              required>
+          </div>
+          <div class="form-group">
+            <label
+              for="validationCode"
+              class="control-label">Validation Code</label>
+            <input
+              type="text"
+              id="validationCode"
+              name="validationCode"
+              class="form-control text-center"
+              formControlName="validationCode"
+              required>
+          </div>
+          <br>
+          <button class="btn btn-primary" type="submit" [disabled]="!confirmForm.valid">Confirm your Account</button>
+        </form>
+        <div class="loader" *ngIf="isLoading"></div>
+      </div>
+    </div>
   </div>
 </div>
