--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" (click)="onHome()">Home</a>
             </li>
             <li routerLinkActive="active" class="nav-item">
               <a class="nav-link"
