--- a/src/app/user/user/user.component.html
+++ b/src/app/user/user/user.component.html
@@ -1,44 +1,46 @@
-<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-  <div class="card p-4">
-    <div class=" image d-flex flex-column justify-content-center align-items-center">
-      <button class="btn btn-secondary">
-        <img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100" />
-      </button>
-      <span class="name mt-3">Eleanor Pena</span>
-      <span class="idd">@eleanorpena</span>
-      <div class="d-flex flex-row justify-content-center align-items-center gap-2">
-        <span class="idd1">Oxc4c16a645_b21a</span>
-        <span>
-          <i class="fa fa-copy"></i>
-        </span>
-      </div>
-      <div class="d-flex flex-row justify-content-center align-items-center mt-3">
-        <span class="number">1069
-          <span class="follow">Followers</span>
-        </span>
-      </div>
-      <div class=" d-flex mt-2">
-        <button class="btn1 btn-dark">Edit Profile</button>
-      </div>
-      <div class="text mt-3">
-      <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night.
-      </span>
-      </div>
-      <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"> <span>
-      <i class="fa fa-twitter"></i>
-    </span>
-        <span>
-      <i class="fa fa-facebook-f"></i>
-    </span>
-        <span>
-      <i class="fa fa-instagram"></i>
-    </span>
-        <span>
-      <i class="fa fa-linkedin"></i>
-    </span>
-      </div>
-      <div class=" px-2 rounded mt-4 date ">
-        <span class="join">Joined May,2021</span>
+<div>
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-12 col-xl-4">
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body text-center">
+            <div class="mt-3 mb-4">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
+                   class="rounded-circle img-fluid" style="width: 100px;" />
+            </div>
+            <h4 class="mb-2">Julie L. Arsenault</h4>
+            <p class="text-muted mb-4">@Programmer <span class="mx-2">|</span> <a
+              href="#!">mdbootstrap.com</a></p>
+            <div class="mb-4 pb-2">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slack" viewBox="0 0 16 16">
+                <path d="M3.362 10.11c0 .926-.756 1.681-1.681 1.681S0 11.036 0 10.111C0 9.186.756 8.43 1.68 8.43h1.682v1.68zm.846 0c0-.924.756-1.68 1.681-1.68s1.681.756 1.681 1.68v4.21c0 .924-.756 1.68-1.68 1.68a1.685 1.685 0 0 1-1.682-1.68v-4.21zM5.89 3.362c-.926 0-1.682-.756-1.682-1.681S4.964 0 5.89 0s1.68.756 1.68 1.68v1.682H5.89zm0 .846c.924 0 1.68.756 1.68 1.681S6.814 7.57 5.89 7.57H1.68C.757 7.57 0 6.814 0 5.89c0-.926.756-1.682 1.68-1.682h4.21zm6.749 1.682c0-.926.755-1.682 1.68-1.682.925 0 1.681.756 1.681 1.681s-.756 1.681-1.68 1.681h-1.681V5.89zm-.848 0c0 .924-.755 1.68-1.68 1.68A1.685 1.685 0 0 1 8.43 5.89V1.68C8.43.757 9.186 0 10.11 0c.926 0 1.681.756 1.681 1.68v4.21zm-1.681 6.748c.926 0 1.682.756 1.682 1.681S11.036 16 10.11 16s-1.681-.756-1.681-1.68v-1.682h1.68zm0-.847c-.924 0-1.68-.755-1.68-1.68 0-.925.756-1.681 1.68-1.681h4.21c.924 0 1.68.756 1.68 1.68 0 .926-.756 1.681-1.68 1.681h-4.21z"/>
+              </svg>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown button
+              </button>
+              <div class="dropdown-menu" routerLinkActive="active" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" routerLink="/userEdit">Edit Page</a>
+                <a class="dropdown-item" (click)="check()">Signed In?</a>
+              </div>
+            </div>
+            <div class="d-flex justify-content-between text-center mt-5 mb-2">
+              <div>
+                <p class="mb-2 h5">8471</p>
+                <p class="text-muted mb-0">Wallets Balance</p>
+              </div>
+              <div class="px-3">
+                <p class="mb-2 h5">8512</p>
+                <p class="text-muted mb-0">Income amounts</p>
+              </div>
+              <div>
+                <p class="mb-2 h5">4751</p>
+                <p class="text-muted mb-0">Total Transactions</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
