--- a/src/app/experts/expert-search/expert-search.component.html
+++ b/src/app/experts/expert-search/expert-search.component.html
@@ -1,1 +1,17 @@
-<p>expert-search works!</p>
+<div class="row" >
+  <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3 text-center">
+    <label class="btn btn-default">Experts</label>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <ul class="list-group">
+      <li
+        class="list-group-item"
+        *ngFor="let member of teamMember">
+        {{member.first_name}} {{member.last_name}} : {{member.service}} - {{member.proficiency}}
+      </li>
+    </ul>
+  </div>
+</div>
+
