--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-12 col-md-6 col-md-offset-3">
+  <div class="col-xs-12 pt-5">
     <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <div class="col-xs-12">
@@ -34,6 +34,16 @@
             email/>
         </div>
         <div class="col-xs-12">
+          <label for="userName">Username</label>
+          <input
+            type="text"
+            id="userName"
+            class="form-control"
+            formControlName="userName"
+            name="userName"
+            required>
+        </div>
+        <div class="col-xs-12">
           <label for="title">Title</label>
           <input
             type="title"
@@ -53,27 +63,28 @@
             name="team"
             required/>
         </div>
-        <div class="input-group mb-3">
+        <div class="input-group">
           <div class="input-group-prepend">
             <label class="input-group-text" for="service">Services</label>
           </div>
           <select class="form-select" formControlName="service"name="service" id="service" required>
-            <option value="1">S3</option>
-            <option value="2">Dynamo</option>
-            <option value="3">Lambda</option>
-            <option value="3">API</option>
-            <option value="3">CloudFront</option>
+            <option value="s3">S3</option>
+            <option value="dynamoDB">DynamoDB</option>
+            <option value="lambda">Lambda</option>
+            <option value="api">API</option>
+            <option value="cloudfront">CloudFront</option>
           </select>
 
           <div class="input-group-prepend">
             <label class="input-group-text" for="proficiency">Proficiency</label>
           </div>
           <select class="form-select" formControlName="proficiency"name="proficiency" id="proficiency" required>
-            <option value="1">Beginner</option>
-            <option value="2">Intermediate</option>
-            <option value="3">Expert</option>
+            <option value="beginner">Beginner</option>
+            <option value="intermediate">Intermediate</option>
+            <option value="expert">Expert</option>
           </select>
         </div>
+        <br>
         <div>
           <button type="submit"
                   class="btn btn-primary"
