--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -8,9 +8,9 @@
               <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
                    class="rounded-circle img-fluid" style="width: 100px;" />
             </div>
-            <h4 class="mb-2">hi</h4>
-            <p class="text-muted mb-4">@Programmer <span class="mx-2">|</span> <a
-              href="#!">mdbootstrap.com</a></p>
+            <h4 class="mb-2">{{teamMember.first_name}} {{teamMember.last_name}}</h4>
+            <p class="text-muted mb-4">{{teamMember.title}} <span class="mx-2">|</span> <a
+              href="#!">{{teamMember.email}}</a></p>
             <div class="mb-4 pb-2">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-slack" viewBox="0 0 16 16">
                 <path d="M3.362 10.11c0 .926-.756 1.681-1.681 1.681S0 11.036 0 10.111C0 9.186.756 8.43 1.68 8.43h1.682v1.68zm.846 0c0-.924.756-1.68 1.681-1.68s1.681.756 1.681 1.68v4.21c0 .924-.756 1.68-1.68 1.68a1.685 1.685 0 0 1-1.682-1.68v-4.21zM5.89 3.362c-.926 0-1.682-.756-1.682-1.681S4.964 0 5.89 0s1.68.756 1.68 1.68v1.682H5.89zm0 .846c.924 0 1.68.756 1.68 1.681S6.814 7.57 5.89 7.57H1.68C.757 7.57 0 6.814 0 5.89c0-.926.756-1.682 1.68-1.682h4.21zm6.749 1.682c0-.926.755-1.682 1.68-1.682.925 0 1.681.756 1.681 1.681s-.756 1.681-1.68 1.681h-1.681V5.89zm-.848 0c0 .924-.755 1.68-1.68 1.68A1.685 1.685 0 0 1 8.43 5.89V1.68C8.43.757 9.186 0 10.11 0c.926 0 1.681.756 1.681 1.68v4.21zm-1.681 6.748c.926 0 1.682.756 1.682 1.681S11.036 16 10.11 16s-1.681-.756-1.681-1.68v-1.682h1.68zm0-.847c-.924 0-1.68-.755-1.68-1.68 0-.925.756-1.681 1.68-1.681h4.21c.924 0 1.68.756 1.68 1.68 0 .926-.756 1.681-1.68 1.681h-4.21z"/>
@@ -21,7 +21,7 @@
                 Dropdown button
               </button>
               <div class="dropdown-menu" routerLinkActive="active" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" routerLink="/User/0/edit">Edit Page</a>
+                <a class="dropdown-item" routerLink="/User/{{userName}}/edit">Edit Page</a>
                 <a class="dropdown-item" (click)="getTeamMember()">Signed In?</a>
               </div>
             </div>
