--- a/src/app/user/user/user.component.html
+++ b/src/app/user/user/user.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="nav flex-column nav-pills col-md-6 center" id="v-pills-tab" role="tablist" aria-orientation="vertical" routerLinkActive="active">
     <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
-       aria-selected="true" routerLink="/User/0">My Page</a>
+       aria-selected="true" routerLink="/User/{{username}}">My Page</a>
     <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-       aria-selected="false" routerLink="/User/0/edit">Edit</a>
+       aria-selected="false" routerLink="/User/{{username}}/edit">Edit</a>
     <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
-       aria-selected="false" routerLink="/User/0/edit">Create Profile</a>
+       aria-selected="false" routerLink="/User/signup">Create Profile</a>
   </div>
   <div class="col-md-6">
     <!--    <app-recipie-detail-->
