fetch profile pic

--- a/src/app/shared/upload-test/upload-test.component.html
+++ b/src/app/shared/upload-test/upload-test.component.html
@@ -3,5 +3,9 @@
   <button (click)="submit()" class="myButton">Upload File</button>
 
   <p> Please Select file</p>
+  <button (click)="getProfilePic()" class="myButton">Fetch File</button>
+  <p>
+    <img [src]="userProfilePic">
+  </p>
 
 </div>
