--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -5,8 +5,8 @@
         <div class="card" style="border-radius: 15px;">
           <div class="card-body text-center">
             <div class="mt-3 mb-4">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
-                   class="rounded-circle img-fluid" style="width: 100px;" />
+              <img [src]="userProfilePic"
+                    style="width: 100px;" />
             </div>
             <h4 class="mb-2">{{teamMember.first_name}} {{teamMember.last_name}}</h4>
             <p class="text-muted mb-4">{{teamMember.title}} <span class="mx-2">|</span> <a
@@ -28,11 +28,11 @@
             <div class="d-flex justify-content-between text-center mt-5 mb-2">
               <div>
                 <p class="mb-2 h5">8471</p>
-                <p class="text-muted mb-0">Wallets Balance</p>
+                <p class="text-muted mb-0">{{teamMember.service}}</p>
               </div>
               <div class="px-3">
                 <p class="mb-2 h5">8512</p>
-                <p class="text-muted mb-0">Income amounts</p>
+                <p class="text-muted mb-0">{{teamMember.proficiency}}</p>
               </div>
               <div>
                 <p class="mb-2 h5">4751</p>
