--- a/src/app/experts/expert-search/expert-search.component.html
+++ b/src/app/experts/expert-search/expert-search.component.html
@@ -1,17 +1,90 @@
 <div class="row" >
-  <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3 text-center">
-    <label class="btn btn-default">Experts</label>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <ul class="list-group">
-      <li
-        class="list-group-item"
-        *ngFor="let member of teamMember">
-        {{member.first_name}} {{member.last_name}} : {{member.service}} - {{member.proficiency}}
-      </li>
-    </ul>
+  <div class="input-group flex-nowrap">
+    <input type="text" name="search" class="form-control" placeholder="Search" [(ngModel)]="searchText">
   </div>
 </div>
 
+<div class="container">
+  <div class="col-xs-12">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Service</th>
+          <th scope="col">Proficiency</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let member of teamMember | filter:searchText">
+        <tr>
+          <th scope="row" class="counterCell"></th>
+          <td>{{member.first_name}}</td>
+          <td>{{member.last_name}}</td>
+          <td>{{member.service}}</td>
+          <td>{{member.proficiency}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+  <p style="text-align: center; font-size: 50px; color: red" >TEST</p>
+
+
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <li>
+      <a class="dropdown-item" href="#">
+        <div class="form-check">
+          <input (change)="onChange($event)" class="form-check-input" type="checkbox" value="intermediate" id="intermediateId"/>
+          <label class="form-check-label" for="intermediateId">Intermediate</label>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="#">
+        <div class="form-check">
+          <input (change)="onChange($event)" class="form-check-input" type="checkbox" value="expert" id="expertId"/>
+          <label class="form-check-label" for="expertId">expert</label>
+        </div>
+      </a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="#">
+        <div class="form-check">
+          <input (change)="onChange($event)" class="form-check-input" type="checkbox" value="beginner" id="beginnerId"/>
+          <label class="form-check-label" for="beginnerId">beginner</label>
+        </div>
+      </a>
+    </li>
+  </ul>
+</div>
+
+<div class="container">
+  <div class="col-xs-12">
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Service</th>
+        <th scope="col">Proficiency</th>
+      </tr>
+      </thead>
+      <tbody *ngFor="let member of teamMember | filter:searchText">
+      <tr>
+        <th scope="row" class="counterCell"></th>
+        <td>{{member.first_name}}</td>
+        <td>{{member.last_name}}</td>
+        <td>{{member.service}}</td>
+        <td>{{member.proficiency}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
