--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -3,7 +3,7 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div>
         <div class="card" style="border-radius: 15px;">
-          <div class="card-body text-center">
+          <div class="card-body text-center" *ngIf="teamMember">
             <div class="mt-3 mb-4">
               <img [src]="userProfilePic"
                     style="width: 100px;" />
