--- a/src/app/teams/teams-detail/teams-detail.component.html
+++ b/src/app/teams/teams-detail/teams-detail.component.html
@@ -1,19 +1,22 @@
 <div class="container py-5 h-100">
   <div class="row d-flex justify-content-center align-items-center h-100">
-    <div class="col col-xl-10">
-      <div class="card mb-5" style="border-radius: 15px;">
+    <div class="col col-xl-12">
+      <div class="card mb-8" style="border-radius: 15px;">
         <div class="card-body p-4" *ngIf="currentTeam">
-          <h3 class="mb-3">{{currentTeam.User_Id}}</h3>
+          <h3 class="mb-4">{{currentTeam.User_Id}}</h3>
           <div class="card-footer tab-card-header">
             <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a class="nav-link" id="one-tab" data-toggle="tab" href="#one" role="tab" aria-controls="One" aria-selected="true">Bio</a>
               </li>
-              <li class="nav-item">tea
+              <li class="nav-item">
                 <a class="nav-link" id="two-tab" data-toggle="tab" href="#two" role="tab" aria-controls="Two" aria-selected="false">Tenets</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="three-tab" data-toggle="tab" href="#three" role="tab" aria-controls="Three" aria-selected="false">Competencies</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="four-tab" data-toggle="tab" href="#four" role="tab" aria-controls="four" aria-selected="false">Members</a>
               </li>
             </ul>
           </div>
@@ -31,6 +34,13 @@
             <div class="tab-pane fade p-3" id="three" role="tabpanel" aria-labelledby="three-tab">
               <h5 class="card-title">{{currentTeam.User_Id}} Competencies</h5>
               <p class="card-text">{{currentTeam.Competencies}}</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+            <div class="tab-pane fade p-3" id="four" role="tabpanel" aria-labelledby="four-tab">
+              <h5 class="card-title">{{currentTeam.User_Id}} Members</h5>
+              <ul class="card-text" *ngFor="let member of teamUsernames">
+                <li>{{member.first_name}} {{member.last_name}}</li>
+              </ul>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
