Slack, updated Team form, updated filter, updated new team member ui display,

--- a/src/app/user/user-start/user-start.component.html
+++ b/src/app/user/user-start/user-start.component.html
@@ -1,1 +1,5 @@
 <h3 appBetterHighlight highlightColor="blue" class="center">Welcome to AWS Development Services</h3>
+
+<div class="alert alert-warning" style="text-align: center;" role="alert" *ngIf="teamMember == (null || undefined)">
+  Looks like you need to create a profile.
+</div>
