--- a/src/app/experts/expert-search/expert-search.component.html
+++ b/src/app/experts/expert-search/expert-search.component.html
@@ -1,77 +1,47 @@
 <div class="row" >
   <div class="input-group flex-nowrap">
     <input type="text" name="search" class="form-control" placeholder="Search" [(ngModel)]="searchText">
+    <div class="dropdown">
+      <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Proficiency Filter
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <li>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input (change)="onChange($event)" #checkboxes class="form-check-input" type="checkbox" value="Intermediate" id="intermediateId"/>
+              <label class="form-check-label" for="intermediateId">Intermediate</label>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input (change)="onChange($event)" #checkboxes class="form-check-input" type="checkbox" value="Expert" id="expertId"/>
+              <label class="form-check-label" for="expertId">expert</label>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input (change)="onChange($event)" #checkboxes class="form-check-input" type="checkbox" value="Beginner" id="beginnerId"/>
+              <label class="form-check-label" for="beginnerId">beginner</label>
+            </div>
+          </a>
+        </li>
+        <li><hr class="dropdown-divider" /></li>
+        <li>
+          <a class="dropdown-item">
+            <div class="button">
+              <a class="dropdown-item" (click)="uncheckAll()">Reset</a>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
-
-<div class="container">
-  <div class="col-xs-12">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Service</th>
-          <th scope="col">Proficiency</th>
-        </tr>
-      </thead>
-      <tbody *ngFor="let member of teamMember | filter:searchText">
-        <tr>
-          <th scope="row" class="counterCell"></th>
-          <td>{{member.first_name}}</td>
-          <td>{{member.last_name}}</td>
-          <td>{{member.service}}</td>
-          <td>{{member.proficiency}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
-
-  <p style="text-align: center; font-size: 50px; color: red" >TEST</p>
-
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Dropdown button
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <li>
-      <a class="dropdown-item" href="#">
-        <div class="form-check">
-          <input (change)="onChange($event)" class="form-check-input" type="checkbox" value="Intermediate" id="intermediateId"/>
-          <label class="form-check-label" for="intermediateId">Intermediate</label>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a class="dropdown-item" href="#">
-        <div class="form-check">
-          <input (change)="onChange($event)" class="form-check-input" type="checkbox" value="Expert" id="expertId"/>
-          <label class="form-check-label" for="expertId">expert</label>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a class="dropdown-item" href="#">
-        <div class="form-check">
-          <input (change)="onChange($event)" class="form-check-input" type="checkbox" value="Beginner" id="beginnerId"/>
-          <label class="form-check-label" for="beginnerId">beginner</label>
-        </div>
-      </a>
-    </li>
-    <li><hr class="dropdown-divider" /></li>
-    <li>
-      <a class="dropdown-item">
-        <div class="button">
-          <a class="dropdown-item" (click)="resetFilter()">Reset</a>
-        </div>
-      </a>
-    </li>
-  </ul>
-</div>
-
 <div class="container">
   <div class="col-xs-12">
     <table class="table table-hover" style="cursor:pointer;">
