Fix confirm user and reload, fix user profile pic and slakc for expert detail

--- a/src/app/experts/expert-detail/expert-detail.component.css
+++ b/src/app/experts/expert-detail/expert-detail.component.css
@@ -86,3 +86,12 @@ hr .new1 {
 .date {
   background-color: #ccc
 }
+
+.social-icon{
+  color: blueviolet;
+  transition: color 0.24s;
+}
+
+.social-icon:hover {
+  color: red;
+}
