--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -18,27 +18,18 @@
                 </svg>
               </a>
             </div>
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown button
-              </button>
-              <div class="dropdown-menu" routerLinkActive="active" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" routerLink="/User/{{userName}}/edit">Edit Page</a>
-                <a class="dropdown-item" (click)="getTeamMember()">Signed In?</a>
-              </div>
-            </div>
             <div class="d-flex justify-content-between text-center mt-5 mb-2">
               <div>
-                <p class="mb-2 h5">8471</p>
+                <p class="mb-2 h5">Service</p>
                 <p class="text-muted mb-0">{{teamMember.service}}</p>
               </div>
               <div class="px-3">
-                <p class="mb-2 h5">8512</p>
+                <p class="mb-2 h5">Proficiency</p>
                 <p class="text-muted mb-0">{{teamMember.proficiency}}</p>
               </div>
               <div>
-                <p class="mb-2 h5">4751</p>
-                <p class="text-muted mb-0">Total Transactions</p>
+                <p class="mb-2 h5">Team</p>
+                <p class="text-muted mb-0">{{teamMember.team}}</p>
               </div>
             </div>
           </div>
