--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -41,7 +41,7 @@
         (click)="switchToSignUp()">Switch to SignUp</button>
     </div>
     <br>
-    <div class="row" *ngIf="!confirmUser">
+    <div class="row" *ngIf="!confirmButton">
       <div class="col-xs-12 col-sm-10 col-md-6 cold-sm-offset-1 col-md-offset-3 text-center">
         <button class="btn btn-default" (click)="onDoConfirm()">Confirm User</button>
       </div>
