--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -15,13 +15,10 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <div class="container-fluid">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" (click)="onHome()">Home</a>
-            </li>
             <li routerLinkActive="active" class="nav-item">
               <a class="nav-link"
                  routerLink="/User"
-                 href="#">Users</a>
+                 (click)="onHome()">My Page</a>
             </li>
             <li routerLinkActive="active" class="nav-item">
               <a class="nav-link"
