changes to dynamodb

--- a/src/app/experts/expert-detail/expert-detail.component.html
+++ b/src/app/experts/expert-detail/expert-detail.component.html
@@ -1,13 +1,13 @@
 <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-  <div class="card p-4" *ngIf="routedTeam">
+  <div class="card p-4" *ngIf="newTeam">
     <div class=" image d-flex flex-column justify-content-center align-items-center">
       <button class="btn btn-secondary">
         <img [src]="userProfilePic" height="100" width="100">
       </button>
-      <span class="name mt-3">{{routedTeam.first_name}} {{routedTeam.last_name}}</span>
-      <span class="idd">{{routedTeam.proficiency}}</span>
+      <span class="name mt-3">{{newTeam.first_name}} {{newTeam.last_name}}</span>
+      <span class="idd">{{newTeam.proficiency}}</span>
       <div class="d-flex flex-row justify-content-center align-items-center gap-2">
-        <span class="idd1">{{routedTeam.email}}</span>
+        <span class="idd1">{{newTeam.email}}</span>
         <span>
 					<i class="fa fa-copy"></i>
 				</span>
@@ -16,7 +16,7 @@
         <button class="btn1 btn-dark" style="font-style: italic">Slack</button>
       </div>
       <div class="text mt-3">
-				<span>{{routedTeam.first_name}} works as a {{routedTeam.title}} in the {{routedTeam.team}} team.
+				<span>{{newTeam.first_name}} works as a {{newTeam.title}} in the {{newTeam.team}} team.
 				</span>
       </div>
       <div class="mb-4 pb-2">
