--- a/src/app/experts/expert-search/expert-search.component.html
+++ b/src/app/experts/expert-search/expert-search.component.html
@@ -1,6 +1,5 @@
 <div class="row" >
   <div class="input-group flex-nowrap">
-    <input type="text" name="search" class="form-control" placeholder="Search" [(ngModel)]="searchText">
     <div class="dropdown">
       <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Proficiency Filter
@@ -51,25 +50,21 @@
         <th scope="col">First Name</th>
         <th scope="col">Last Name</th>
         <th scope="col">Team</th>
-        <th scope="col">Proficiency</th>
-        <th scope="col">Service</th>
         <th scope="col">Title</th>
         <th scope="col">Email</th>
         <th scope="col">User Name</th>
       </tr>
       </thead>
-      <tbody *ngFor="let member of teamMember | filter:searchText">
-      <tr (click)="showRow(member)">
-        <th scope="row" class="counterCell"></th>
-        <td>{{member.first_name}}</td>
-        <td>{{member.last_name}}</td>
-        <td>{{member.team}}</td>
-        <td>{{member.proficiency}}</td>
-        <td>{{member.service}}</td>
-        <td>{{member.title}}</td>
-        <td>{{member.email}}</td>
-        <td>{{member.user_name}}</td>
-      </tr>
+      <tbody *ngFor="let member of teamMember">
+        <tr (click)="showRow(member)">
+          <th scope="row" class="counterCell"></th>
+          <td>{{member.first_name}}</td>
+          <td>{{member.last_name}}</td>
+          <td>{{member.team}}</td>
+          <td>{{member.title}}</td>
+          <td>{{member.email}}</td>
+          <td>{{member.user_name}}</td>
+        </tr>
       </tbody>
     </table>
   </div>
