--- a/src/app/teams/team-search/team-search.component.html
+++ b/src/app/teams/team-search/team-search.component.html
@@ -1,19 +1,67 @@
-<div class="row">
-  <div class="nav flex-column nav-pills col-md-6 center" id="v-pills-tab" role="tablist" aria-orientation="vertical" routerLinkActive="active">
-    <a class="nav-link" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-       aria-selected="false" (click)="onRefresh()">Home</a>
-    <a class="nav-link" id="v-pills-message-tab" data-toggle="pill" href="#v-pills-message" role="tab" aria-controls="v-pills-message"
-       aria-selected="false" routerLink="/teams/GCC" >GCC</a>
-    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-       aria-selected="false" routerLink="/teams/RDT">RDT</a>
+<div class="row" >
+  <div class="input-group flex-nowrap">
+    <div class="dropdown">
+      <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Proficiency Filter
+      </button>
+      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <li>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input #checkboxes class="form-check-input" type="checkbox" value="Intermediate" id="intermediateId"/>
+              <label class="form-check-label" for="intermediateId">Intermediate</label>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input  #checkboxes class="form-check-input" type="checkbox" value="Expert" id="expertId"/>
+              <label class="form-check-label" for="expertId">expert</label>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="dropdown-item">
+            <div class="form-check">
+              <input  #checkboxes class="form-check-input" type="checkbox" value="Beginner" id="beginnerId"/>
+              <label class="form-check-label" for="beginnerId">beginner</label>
+            </div>
+          </a>
+        </li>
+        <li><hr class="dropdown-divider" /></li>
+        <li>
+          <a class="dropdown-item">
+            <div class="button">
+              <a class="dropdown-item" >Reset</a>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
-  <div class="col-md-6">
-    <!--    <app-recipie-detail-->
-    <!--      *ngIf="selectedRecipe; else infoText"-->
-    <!--      [chosenRecipe]="selectedRecipe"></app-recipie-detail>-->
-    <!--    <ng-template #infoText>-->
-    <!--      <section appBetterHighlight highlightColor="blue">Please Select a Recipe!</section>-->
-    <!--    </ng-template>-->
-    <router-outlet></router-outlet>
+</div>
+<div class="container">
+  <div class="col-xs-12">
+    <table class="table table-hover" style="cursor:pointer;">
+      <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Team</th>
+        <th scope="col">Biography</th>
+        <th scope="col">Competencies</th>
+        <th scope="col">Market</th>
+      </tr>
+      </thead>
+      <tbody *ngFor="let team of teams | filter:searchText">
+      <tr (click)="showRow(team)">
+        <th scope="row" class="counterCell"></th>
+        <td>{{team.PK}}</td>
+        <td>{{team.Biography}}</td>
+        <td>{{team.Competencies}}</td>
+        <td>{{team.Market}}</td>
+      </tr>
+      </tbody>
+    </table>
   </div>
 </div>
