--- a/src/app/teams/teams-detail/teams-detail.component.html
+++ b/src/app/teams/teams-detail/teams-detail.component.html
@@ -3,7 +3,7 @@
     <div class="col col-xl-12">
       <div class="card mb-8" style="border-radius: 15px;">
         <div class="card-body p-4" *ngIf="currentTeam">
-          <h3 class="mb-4">{{currentTeam.User_Id}}</h3>
+          <h3 class="mb-4">{{currentTeam.PK}}</h3>
           <div class="card-footer tab-card-header">
             <ul class="nav nav-tabs card-header-tabs" id="myTab" role="tablist">
               <li class="nav-item">
@@ -22,22 +22,22 @@
           </div>
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active p-3" id="one" role="tabpanel" aria-labelledby="one-tab">
-              <h5 class="card-title">{{currentTeam.User_Id}} Biography</h5>
+              <h5 class="card-title">{{currentTeam.PK}} Biography</h5>
               <p class="card-text">{{currentTeam.Biography}}</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
             <div class="tab-pane fade p-3" id="two" role="tabpanel" aria-labelledby="two-tab">
-              <h5 class="card-title">{{currentTeam.User_Id}} Tenets</h5>
+              <h5 class="card-title">{{currentTeam.PK}} Tenets</h5>
               <p class="card-text">{{currentTeam.Tenets}}</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
             <div class="tab-pane fade p-3" id="three" role="tabpanel" aria-labelledby="three-tab">
-              <h5 class="card-title">{{currentTeam.User_Id}} Competencies</h5>
+              <h5 class="card-title">{{currentTeam.PK}} Competencies</h5>
               <p class="card-text">{{currentTeam.Competencies}}</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
             <div class="tab-pane fade p-3" id="four" role="tabpanel" aria-labelledby="four-tab">
-              <h5 class="card-title">{{currentTeam.User_Id}} Members</h5>
+              <h5 class="card-title">{{currentTeam.PK}} Members</h5>
               <ul class="card-text" *ngFor="let member of teamUsernames">
                 <li>{{member.first_name}} {{member.last_name}}</li>
               </ul>
