api-service: new end points for skills update and clean up app.module.ts - pagination and generic filter expert-search.component.html - filter n pagination addition expert-search.component.ts - logic for filter profile.model.ts - new addition user-edit.component.html - reorganization user-edit.component.ts - skills db logic user-update.component.html - reorganization user-update.component.ts - updates to handle skills

--- a/src/app/experts/expert-search/expert-search.component.css
+++ b/src/app/experts/expert-search/expert-search.component.css
@@ -10,3 +10,26 @@ table {
   background-color: #E8EAF6;
   cursor: pointer;
 }
+
+ul {
+  column-count: 2;
+  column-gap: 3rem;
+  list-style: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.app-btn {
+  height: 32px;
+  width: 110px;
+  background: #f28100;
+  border: none;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+  border-radius: 2px;
+}
+
+
