--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -33,26 +33,21 @@
             required/>
         </div>
         <label for="title">Team</label>
-        <div class="input-group">
+        <div class="input-group" style="margin-bottom: 5px">
           <select class="form-select" formControlName="team" name="team" id="team" required>
             <option value="GCC">GCC</option>
             <option value="Alexa">Alexa</option>
             <option value="PrimeTv">PrimeTv</option>
           </select>
         </div>
-        <div class="mb-3">
-          <label for="profilePic">Profile Pic</label>
-          <input class="form-control" type="file" id="profilePic" (change)="onChange($event)">
-        </div>
-
+        <label for="title" *ngIf="addSkills">Skills</label>
         <div class="col-xs-12" formArrayName="skills">
           <div
             class="row"
             *ngFor="let skillsCtrl of Controls; let i = index"
             [formGroupName]="i">
-            <label for="title">Skills</label>
             <div class="input-group">
-              <div class="input-group-prepend">
+              <div class="input-group-prepend" style="margin-bottom: 3px">
                 <label class="input-group-text" for="service">Services</label>
               </div>
               <select class="form-select" formControlName="service" name="service" id="service" required>
@@ -81,11 +76,14 @@
             </div>
           </div>
         </div>
-        <br>
-        <div class="row">
+        <div class="row" style="margin-bottom: 5px">
           <div class="col-xs-12">
             <button type="button" class="btn btn-secondary" (click)="onAddSkills()">Add Skills</button>
           </div>
+        </div>
+        <div class="mb-3">
+          <label for="profilePic">Profile Pic</label>
+          <input class="form-control" type="file" id="profilePic" (change)="onChange($event)">
         </div>
         <hr>
         <div>
