--- a/src/app/experts/expert-search/expert-search.component.html
+++ b/src/app/experts/expert-search/expert-search.component.html
@@ -1,46 +1,13 @@
-<div class="row" >
-  <div class="input-group flex-nowrap">
-    <div class="dropdown">
-      <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Proficiency Filter
-      </button>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <li>
-          <a class="dropdown-item">
-            <div class="form-check">
-              <input (change)="onChange($event)" #checkboxes class="form-check-input" type="checkbox" value="Intermediate" id="intermediateId"/>
-              <label class="form-check-label" for="intermediateId">Intermediate</label>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="dropdown-item">
-            <div class="form-check">
-              <input (change)="onChange($event)" #checkboxes class="form-check-input" type="checkbox" value="Expert" id="expertId"/>
-              <label class="form-check-label" for="expertId">expert</label>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="dropdown-item">
-            <div class="form-check">
-              <input (change)="onChange($event)" #checkboxes class="form-check-input" type="checkbox" value="Beginner" id="beginnerId"/>
-              <label class="form-check-label" for="beginnerId">beginner</label>
-            </div>
-          </a>
-        </li>
-        <li><hr class="dropdown-divider" /></li>
-        <li>
-          <a class="dropdown-item">
-            <div class="button">
-              <a class="dropdown-item" (click)="uncheckAll()">Reset</a>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<div style="float: right">
+  <input class="btn btn-secondary active" type="button" value="Clear" (click)="resetSearch()">
 </div>
+<div style="float: right">
+    <app-filter
+      [list]="filterList"
+      (onFilterChange)="filterChange($event)">
+    </app-filter>
+</div>
+
 <div class="container">
   <div class="col-xs-12">
     <table class="table table-hover" style="cursor:pointer;">
@@ -55,7 +22,7 @@
         <th scope="col">User Name</th>
       </tr>
       </thead>
-      <tbody *ngFor="let member of teamMember">
+      <tbody *ngFor="let member of teamMember | paginate : { itemsPerPage: 3, currentPage: p}">
         <tr (click)="showRow(member)">
           <th scope="row" class="counterCell"></th>
           <td>{{member.first_name}}</td>
@@ -67,5 +34,6 @@
         </tr>
       </tbody>
     </table>
+    <pagination-controls (pageChange)="p = $event" class="pagination justify-content-end"></pagination-controls>
   </div>
 </div>
