--- a/src/app/user/user-update/user-update.component.html
+++ b/src/app/user/user-update/user-update.component.html
@@ -54,8 +54,8 @@
                 <option value="S3">S3</option>
                 <option value="DynamoDB">DynamoDB</option>
                 <option value="Lambda">Lambda</option>
-                <option value="Api">API</option>
-                <option value="Cloudfront">CloudFront</option>
+                <option value="API">API</option>
+                <option value="CloudFront">CloudFront</option>
               </select>
 
               <div class="input-group-prepend">
